# dumbledore

./: .gitignore  DATA.md  README.md  pyproject.toml  requirements-verl.txt  requirements.txt
configs/: grpo_gemma4_e2b.example.yaml  pipeline.example.yaml  pipeline.lfw.example.yaml  pipeline.wider.example.yaml
configs/verl/: README.md
docs/: EXPORT_LITERT.md
dumbledore/: __init__.py  dataset_report.py  deepface_ops.py  face_attr_domains.py  gt_inspect.py  gt_schema.py  paths.py  pipeline_config.py  prompts.py
dumbledore/cli/: __init__.py  build_verl_parquet.py  dataset_report.py  download_face_subset.py  extract_deepface_gt.py  sft_coldstart.py  verl_config.py
rewards/: __init__.py  face_attr_reward.py
schema/: gt_sample.json  gt_v1.json
scripts/: build_verl_parquet.py  download_face_subset.py  extract_deepface_gt.py  pipeline_env.sh  run_stage0_config.sh  run_stage1_images.sh  run_stage2_extract.sh  run_stage3_report.sh  run_stage4_parquet.sh  run_stage5_sft.sh  run_stage5_verl.sh  run_verl_grpo.sh  run_verl_rl.sh  sft_coldstart.py  verl_config_helper.py
tests/: test_build_parquet_stage.py  test_dataset_report.py  test_deepface_ops.py  test_face_attr_domains.py  test_face_attr_reward.py  test_gt_inspect.py  test_pipeline_config.py  test_prompt_gt_alignment.py  test_prompts.py  test_report_viz_optional.py
